--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
-<link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
-<script type="text/javascript" src="{{ "/static/app.js"|asseturl }}"></script>
+<link rel="stylesheet" href="/static/styles.css">
+<link rel="stylesheet" href="/static/pygments.css">
+<script type="text/javascript" src="/static/app.js"></script>
 <title>{% block title %}yaml-resume{% endblock %}</title>
 {%- endblock %}
 <body class="{% block bodyclass %}default{% endblock %}">
@@ -52,7 +52,7 @@
             <p><span class="fa fa-fw fa-github"></span> <a href="https://github.com/notsag/yaml-resume">notsag/yaml-resume </a>
             <p><span class="fa fa-fw fa-list"></span> <a href="https://pypi.python.org/pypi/yaml-resume">Releases on PyPI</a>
             <p><span class="fa fa-fw fa-cogs"></span> <a href="https://travis-ci.org/notsag/yaml-resume">Test status</a>
-            <p><span class="fa fa-fw fa-book"></span> <a href="https://yaml-resume.com">Documentation</a>
+            <p><span class="fa fa-fw fa-book"></span> <a href="https://docs.yaml-resume.com">Documentation</a>
             <div class="pypi-box" data-pypi="yaml-resume"></div>
           </div>
         </div>
