Replace travis-ci.org with travis-ci.com

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,7 @@
           <div class="infobox">
             <p><span class="fa fa-fw fa-github"></span> <a href="https://github.com/notsag/yaml-resume">notsag/yaml-resume </a>
             <p><span class="fa fa-fw fa-list"></span> <a href="https://pypi.python.org/pypi/yaml-resume">Releases on PyPI</a>
-            <p><span class="fa fa-fw fa-cogs"></span> <a href="https://travis-ci.org/notsag/yaml-resume">Test status</a>
+            <p><span class="fa fa-fw fa-cogs"></span> <a href="https://travis-ci.com/notsag/yaml-resume">Test status</a>
             <p><span class="fa fa-fw fa-book"></span> <a href="https://docs.yaml-resume.com">Documentation</a>
             <div class="pypi-box" data-pypi="yaml-resume"></div>
           </div>
